aligned with correct resolution but without page margins

--- a/src/components/Resume/Projects/style.scss
+++ b/src/components/Resume/Projects/style.scss
@@ -4,7 +4,7 @@ ul {
 	margin-left: 22px;
 }
 .wrapper {
-	width: 80%;
+	width: 95%;
 	background: rgba(240, 240, 240, 0.5);
 	border-radius: 5px;
 	drop-shadow: 1px 1px 1px #bdbdbd;
