--- a/src/components/Resume/style.scss
+++ b/src/components/Resume/style.scss
@@ -2,6 +2,7 @@
 	margin: 0px 0px;
 	background: white;
 	width: 794px;
+	height: auto;
 	// height: 110vh;
 
 	.resume-header {
@@ -16,7 +17,7 @@
 		padding-top: 40px;
 		text-align: center;
 		line-height: 35px;
-		letter-spacing: 6px;
+		letter-spacing: 3px;
 
 		.resume-subtitle {
 			font-size: 15px;
@@ -25,7 +26,7 @@
 	}
 
 	.resume-section {
-		margin-bottom: 40px;
+		margin-bottom: 20px;
 	}
 
 	.resume-content {
@@ -35,14 +36,14 @@
 		padding-top: 20px;
 
 		.resume-section-title {
-			letter-spacing: 3px;
+			letter-spacing: 2px;
 			font-size: 14px;
 		}
 
 		.horizontal-line {
 			height: 1px;
 			border: 1px solid #dedede;
-			width: 80%;
+			width: 95%;
 			margin-top: 10px;
 		}
 
@@ -68,7 +69,7 @@
 
 			.content {
 				font-size: 10px;
-				width: 85%;
+				width: 95%;
 				line-height: 2;
 				text-align: justify;
 				padding-bottom: 10px;
