--- a/src/pages/LandingPage/style.scss
+++ b/src/pages/LandingPage/style.scss
@@ -24,7 +24,7 @@
 	-ms-flex-pack: center;
 	justify-content: center;
 	background-image: linear-gradient(to bottom right, #e1bee7, #b2ebf2);
-
+	height: 100%;
 	.landing-page-wrapper {
 		margin: 20px;
 	}
